--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
   <main>
     <div class="wrapper">
       <div class="row">
-        <article>
+        <article class="sidy-by-side">
           <h2 class="fun-for-family">De leukste dagen samen!</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores dolor id doloremque accusamus quod. Repellat cupiditate unde aperiam, ex fugiat beatae fuga. Esse distinctio rerum expedita fuga libero adipisci quis!</p>
         </article>
-        <article>
+        <article class="sidy-by-side">
           <h2 class="accessibility">Betaalbaar en toegankelijk</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores dolor id doloremque accusamus quod. Repellat cupiditate unde aperiam, ex fugiat beatae fuga. Esse distinctio rerum expedita fuga libero adipisci quis!</p>
         </article>
