--- a/payment.html
+++ b/payment.html
@@ -18,6 +18,7 @@
   </header>
   <main>
     <div class="wrapper">
+      <div class="pay">
       <article>
         <h2>Betaling afronden</h2>
         <span>Selecteer de manier waarop u de bestelling wilt betalen.</span>
@@ -44,6 +45,7 @@
           </div>
         </div>
       </article>
+      </div>
     </div>
   </main>
   <footer>
