--- a/product.html
+++ b/product.html
@@ -17,7 +17,20 @@
     </div>
   </header>
   <main>
-    
+    <div class="wrapper">
+      <div class="pay">
+        <div class="sidy-by-side">
+          <div>
+            <h2>DeveloperLand Mok</h2>
+            <img src="images/merchandise/mok.JPG" alt="Een mok van DeveloperLand">
+          </div>
+          <div>
+            <p><span>In het kort: </span>Een mok met jouw eigen actiefoto erop!<br><span>Prijs &euro; </span>14,95<br><span>Over dit product </span>Een mooie mok met jouw eigen foto. De opdruk is van hoge kwaliteit en laat de lachende, huilende en van de pret gezichten zien van iedereen in jouw achtbaan-karretje.</p>
+            <a href="cart.html"><button>Plaats in winkelmand (+ &euro;14,95)</button></a>
+          </div>
+        </div>
+      </div>
+    </div>
   </main>
   <footer>
     <div class="wrapper">
