--- a/cart.html
+++ b/cart.html
@@ -22,11 +22,43 @@
         <h2>Winkelwagentje</h2>
         <div>
           <span>Dit zijn alle producten die u gaat bestellen. Controleer een laatste keer of alles klopt en ga daarna verder met de grote groene knop.</span>
-          <!-- 
-            Winkelwagen hier
-          -->
-          
-          <a href="payment.html"><button>Dit is correct, verder naar betaling</button></a>
+          <table style="width:100%">
+            <tr>
+              <th>Product</th>
+              <th>Prijs (enkel)</th> 
+              <th>Aantal</th>
+              <th>Prijs (totaal)</th>
+            </tr>
+            <tbody>
+              <tr>
+                <td>Entreekaartje Kind t/m 3 jaar</td>
+                <td>&euro; 0</td>
+                <td>1</td>
+                <td>&euro; 0</td>
+              </tr>
+              <tr>
+                <td>Entreekaartje regulier</td>
+                <td>&euro; 24,95</td>
+                <td>2</td>
+                <td>&euro; 49,90</td>
+              </tr>
+              <tr>
+                <td>Entreekaartje senior</td>
+                <td>&euro; 14,95</td>
+                <td>1</td>
+                <td>&euro; 14,95</td>
+              </tr>
+              <tbody>
+                <tr>
+                  <th></th>
+                  <th></th>
+                  <th>Totaalsom <br>(incl. btw)</th>
+                  <th>&euro; 64,85</th>
+                </tr>
+            </tbody>
+          </tbody>
+          </table>
+          <a href="payment.html"><button>Dit is correct, verder naar betaling</button></a>  
         </div>
       </article>
     </div>
